# perspective-nix

./: flake.nix
perspective/cpp/: CMakeLists.txt  default.nix
